--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abdul Ahad - Quant Strategist & Developer</title>
     <meta name="description" content="Abdul Ahad - Quant Strategist & Developer from IIT Guwahati. Portfolio optimization strategies, research, design, and production systems." />
+    <script>
+      window.va = window.va || function(){(window.vaq = window.vaq || []).push(arguments)};
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body>
     <div id="root"></div>
